@@ -1,3 +1,8 @@
+2008-01-16  Andreas Kirschbaum
+
+	* Show correct weapon speed when connecting to recent Crossfire
+	servers.
+
 2008-01-15  Andreas Kirschbaum
 
 	* Do not crash when applying a Glowing Crystal.
